--- a/Uber/Base.lproj/Main.storyboard
+++ b/Uber/Base.lproj/Main.storyboard
@@ -211,6 +211,7 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="chamarUber:" destination="Rua-0s-wv6" eventType="touchUpInside" id="nTp-Fi-tyl"/>
                                     <action selector="entrar:" destination="iRn-Va-70a" eventType="touchUpInside" id="SQT-u6-ozc"/>
                                 </connections>
                             </button>
